tests/ui/consts/const-eval/raw-pointer-ub.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/raw-pointer-ub.rs:4:16
   |
LL |     let _val = *ptr;
   |                ^^^^ accessing memory based on pointer with alignment 1, but alignment 4 is required

error[E0080]: evaluation of constant value failed
  --> $DIR/raw-pointer-ub.rs:11:5
   |
LL |     *ptr = 0;
   |     ^^^^^^^^ accessing memory based on pointer with alignment 1, but alignment 4 is required

error[E0080]: evaluation of constant value failed
  --> $SRC_DIR/core/src/intrinsics.rs:LL:COL
   |
   = note: accessing memory with alignment 1, but alignment 4 is required
   |
note: inside `copy_nonoverlapping::<u32>`
  --> $SRC_DIR/core/src/intrinsics.rs:LL:COL
note: inside `std::ptr::const_ptr::<impl *const u32>::copy_to_nonoverlapping`
  --> $SRC_DIR/core/src/ptr/const_ptr.rs:LL:COL
note: inside `MISALIGNED_COPY`
  --> $DIR/raw-pointer-ub.rs:19:5
   |
LL |     y.copy_to_nonoverlapping(&mut z, 1);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0080]: evaluation of constant value failed
  --> $DIR/raw-pointer-ub.rs:31:16
   |
LL |     let _val = (*ptr).0;
   |                ^^^^^^^^ accessing memory based on pointer with alignment 4, but alignment 16 is required

error[E0080]: evaluation of constant value failed
  --> $DIR/raw-pointer-ub.rs:38:16
   |
LL |     let _val = *ptr;
   |                ^^^^ memory access failed: expected a pointer to 8 bytes of memory, but got ALLOC0 which is only 4 bytes from the end of the allocation

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0080`.
